--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
     <a-marker preset="hiro">
       <a-image 
         src="assets/images/couple_sitting.png"
-        position="0 0.5 0"
-        rotation="-90 0 0"
-        width="1.2"
-        height="1.8"
+        src="images/wedding-couple.png"
+        position="0 0.3 0"     ← lower (sitting)
+        rotation="-90 0 0"     
+        width="1.5"            ← wider (2 people)
+        height="1.5"           ← shorter (sitting)
         opacity="0.95">
       </a-image>
     </a-marker>
